--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -33,8 +33,18 @@
     "from dask.diagnostics import ProgressBar\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import skimage.io\n"
+    "import skimage.io\n",
+    "\n",
+    "from dask_ml.linear_model import LogisticRegression\n",
+    "from dask_ml.model_selection import train_test_split\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75,14 +85,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['y_test_sampleSubmission.csv', 'X_train.csv', 'y_train.csv', 'X_test.csv']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "PermissionError",
+     "evalue": "[Errno 1] Operation not permitted: '/Users/jorgenkongsro/Downloads/dat300-ca1-autumn-2019/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-3987331449d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mworkdir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/Users/jorgenkongsro/Downloads/dat300-ca1-autumn-2019/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworkdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 1] Operation not permitted: '/Users/jorgenkongsro/Downloads/dat300-ca1-autumn-2019/'"
+     ]
     }
    ],
    "source": [
@@ -98,209 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>f1</th>\n",
-       "      <th>f2</th>\n",
-       "      <th>f3</th>\n",
-       "      <th>f4</th>\n",
-       "      <th>f5</th>\n",
-       "      <th>f6</th>\n",
-       "      <th>f7</th>\n",
-       "      <th>f8</th>\n",
-       "      <th>f9</th>\n",
-       "      <th>f10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>f153</th>\n",
-       "      <th>f154</th>\n",
-       "      <th>f155</th>\n",
-       "      <th>f156</th>\n",
-       "      <th>f157</th>\n",
-       "      <th>f158</th>\n",
-       "      <th>f159</th>\n",
-       "      <th>f160</th>\n",
-       "      <th>f161</th>\n",
-       "      <th>f162</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.180510</td>\n",
-       "      <td>-0.192210</td>\n",
-       "      <td>-0.20515</td>\n",
-       "      <td>-0.215250</td>\n",
-       "      <td>-0.215960</td>\n",
-       "      <td>-0.215960</td>\n",
-       "      <td>-0.216130</td>\n",
-       "      <td>-0.218260</td>\n",
-       "      <td>-0.22907</td>\n",
-       "      <td>-0.506090</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.31380</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.164560</td>\n",
-       "      <td>-0.180510</td>\n",
-       "      <td>-0.20515</td>\n",
-       "      <td>-0.205680</td>\n",
-       "      <td>-0.206210</td>\n",
-       "      <td>-0.215250</td>\n",
-       "      <td>-0.216130</td>\n",
-       "      <td>-0.218260</td>\n",
-       "      <td>-0.22907</td>\n",
-       "      <td>-0.506090</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.31380</td>\n",
-       "      <td>-0.16006</td>\n",
-       "      <td>-0.16006</td>\n",
-       "      <td>-0.16006</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "      <td>-0.16709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.044046</td>\n",
-       "      <td>-0.050072</td>\n",
-       "      <td>-0.05787</td>\n",
-       "      <td>-0.066023</td>\n",
-       "      <td>-0.067086</td>\n",
-       "      <td>-0.067972</td>\n",
-       "      <td>-0.087645</td>\n",
-       "      <td>-0.099342</td>\n",
-       "      <td>-0.30971</td>\n",
-       "      <td>1.230800</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.13746</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "      <td>-0.10924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.340010</td>\n",
-       "      <td>0.329020</td>\n",
-       "      <td>0.31236</td>\n",
-       "      <td>0.239520</td>\n",
-       "      <td>0.235090</td>\n",
-       "      <td>0.189360</td>\n",
-       "      <td>0.173410</td>\n",
-       "      <td>0.161540</td>\n",
-       "      <td>0.15835</td>\n",
-       "      <td>-0.038613</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.38480</td>\n",
-       "      <td>0.42301</td>\n",
-       "      <td>0.42301</td>\n",
-       "      <td>0.42301</td>\n",
-       "      <td>0.32402</td>\n",
-       "      <td>0.32402</td>\n",
-       "      <td>0.32402</td>\n",
-       "      <td>0.32402</td>\n",
-       "      <td>0.32402</td>\n",
-       "      <td>0.32402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.155170</td>\n",
-       "      <td>-0.168990</td>\n",
-       "      <td>-0.17927</td>\n",
-       "      <td>-0.218790</td>\n",
-       "      <td>-0.251050</td>\n",
-       "      <td>-0.252110</td>\n",
-       "      <td>-0.288620</td>\n",
-       "      <td>-0.325130</td>\n",
-       "      <td>-0.34622</td>\n",
-       "      <td>-0.324840</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.28911</td>\n",
-       "      <td>-0.14978</td>\n",
-       "      <td>-0.14978</td>\n",
-       "      <td>-0.14978</td>\n",
-       "      <td>-0.25570</td>\n",
-       "      <td>-0.25570</td>\n",
-       "      <td>-0.25570</td>\n",
-       "      <td>-0.25570</td>\n",
-       "      <td>-0.32433</td>\n",
-       "      <td>-0.32433</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 162 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         f1        f2       f3        f4        f5        f6        f7  \\\n",
-       "0 -0.180510 -0.192210 -0.20515 -0.215250 -0.215960 -0.215960 -0.216130   \n",
-       "1 -0.164560 -0.180510 -0.20515 -0.205680 -0.206210 -0.215250 -0.216130   \n",
-       "2 -0.044046 -0.050072 -0.05787 -0.066023 -0.067086 -0.067972 -0.087645   \n",
-       "3  0.340010  0.329020  0.31236  0.239520  0.235090  0.189360  0.173410   \n",
-       "4 -0.155170 -0.168990 -0.17927 -0.218790 -0.251050 -0.252110 -0.288620   \n",
-       "\n",
-       "         f8       f9       f10  ...     f153     f154     f155     f156  \\\n",
-       "0 -0.218260 -0.22907 -0.506090  ... -0.31380 -0.16709 -0.16709 -0.16709   \n",
-       "1 -0.218260 -0.22907 -0.506090  ... -0.31380 -0.16006 -0.16006 -0.16006   \n",
-       "2 -0.099342 -0.30971  1.230800  ... -0.13746 -0.10924 -0.10924 -0.10924   \n",
-       "3  0.161540  0.15835 -0.038613  ...  0.38480  0.42301  0.42301  0.42301   \n",
-       "4 -0.325130 -0.34622 -0.324840  ... -0.28911 -0.14978 -0.14978 -0.14978   \n",
-       "\n",
-       "      f157     f158     f159     f160     f161     f162  \n",
-       "0 -0.16709 -0.16709 -0.16709 -0.16709 -0.16709 -0.16709  \n",
-       "1 -0.16709 -0.16709 -0.16709 -0.16709 -0.16709 -0.16709  \n",
-       "2 -0.10924 -0.10924 -0.10924 -0.10924 -0.10924 -0.10924  \n",
-       "3  0.32402  0.32402  0.32402  0.32402  0.32402  0.32402  \n",
-       "4 -0.25570 -0.25570 -0.25570 -0.25570 -0.32433 -0.32433  \n",
-       "\n",
-       "[5 rows x 162 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def import_data(csv_file):\n",
     "    \"\"\" Import data from csv file\n",
@@ -323,88 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed | 37.5s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "f1      3.628002\n",
-       "f2      3.754723\n",
-       "f3      3.836795\n",
-       "f4      4.133142\n",
-       "f5      4.299061\n",
-       "f6      4.377457\n",
-       "f7      9.171993\n",
-       "f8      9.276405\n",
-       "f9      9.410288\n",
-       "f10     3.628002\n",
-       "f11     3.754723\n",
-       "f12     3.836795\n",
-       "f13     4.133142\n",
-       "f14     4.299061\n",
-       "f15     4.377457\n",
-       "f16     9.171993\n",
-       "f17     9.276405\n",
-       "f18     9.410288\n",
-       "f19     3.628002\n",
-       "f20     3.754723\n",
-       "f21     3.836795\n",
-       "f22     4.133142\n",
-       "f23     4.299061\n",
-       "f24     4.377457\n",
-       "f25     9.171993\n",
-       "f26     9.276405\n",
-       "f27     9.410288\n",
-       "f28     3.628002\n",
-       "f29     3.754723\n",
-       "f30     3.836795\n",
-       "          ...   \n",
-       "f133    9.171993\n",
-       "f134    9.276405\n",
-       "f135    9.410288\n",
-       "f136    3.628002\n",
-       "f137    3.754723\n",
-       "f138    3.836795\n",
-       "f139    4.133142\n",
-       "f140    4.299061\n",
-       "f141    4.377457\n",
-       "f142    9.171993\n",
-       "f143    9.276405\n",
-       "f144    9.410288\n",
-       "f145    3.628002\n",
-       "f146    3.754723\n",
-       "f147    3.836795\n",
-       "f148    4.133142\n",
-       "f149    4.299061\n",
-       "f150    4.377457\n",
-       "f151    9.171993\n",
-       "f152    9.276405\n",
-       "f153    9.410288\n",
-       "f154    3.628002\n",
-       "f155    3.754723\n",
-       "f156    3.836795\n",
-       "f157    4.133142\n",
-       "f158    4.299061\n",
-       "f159    4.377457\n",
-       "f160    9.171993\n",
-       "f161    9.276405\n",
-       "f162    9.410288\n",
-       "Length: 162, dtype: float64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def percent_missing(dataframe):\n",
     "    \"\"\" Check for percent missing values in dataframe\n",
@@ -424,23 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'compute'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-d62b9eae9f7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mfiltered\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnan_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mcheck_for_missing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-30-9626738e4bc8>\u001b[0m in \u001b[0;36mcheck_for_missing\u001b[0;34m(dataframe)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mProgressBar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mpercent_missing\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing_values\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mdataframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpercent_missing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5065\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5066\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5067\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5068\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5069\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'compute'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def nan_filter(dataframe):\n",
     "    \"\"\" Filter out NaN\n",
@@ -508,151 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1      3041268\n",
-      "f2      3037269\n",
-      "f3      3034679\n",
-      "f4      3025327\n",
-      "f5      3020091\n",
-      "f6      3017617\n",
-      "f7      2866313\n",
-      "f8      2863018\n",
-      "f9      2858793\n",
-      "f10     3041268\n",
-      "f11     3037269\n",
-      "f12     3034679\n",
-      "f13     3025327\n",
-      "f14     3020091\n",
-      "f15     3017617\n",
-      "f16     2866313\n",
-      "f17     2863018\n",
-      "f18     2858793\n",
-      "f19     3041268\n",
-      "f20     3037269\n",
-      "f21     3034679\n",
-      "f22     3025327\n",
-      "f23     3020091\n",
-      "f24     3017617\n",
-      "f25     2866313\n",
-      "f26     2863018\n",
-      "f27     2858793\n",
-      "f28     3041268\n",
-      "f29     3037269\n",
-      "f30     3034679\n",
-      "         ...   \n",
-      "f133    2866313\n",
-      "f134    2863018\n",
-      "f135    2858793\n",
-      "f136    3041268\n",
-      "f137    3037269\n",
-      "f138    3034679\n",
-      "f139    3025327\n",
-      "f140    3020091\n",
-      "f141    3017617\n",
-      "f142    2866313\n",
-      "f143    2863018\n",
-      "f144    2858793\n",
-      "f145    3041268\n",
-      "f146    3037269\n",
-      "f147    3034679\n",
-      "f148    3025327\n",
-      "f149    3020091\n",
-      "f150    3017617\n",
-      "f151    2866313\n",
-      "f152    2863018\n",
-      "f153    2858793\n",
-      "f154    3041268\n",
-      "f155    3037269\n",
-      "f156    3034679\n",
-      "f157    3025327\n",
-      "f158    3020091\n",
-      "f159    3017617\n",
-      "f160    2866313\n",
-      "f161    2863018\n",
-      "f162    2858793\n",
-      "Length: 162, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the size of a feature\n",
     "print (x_train_df.count().compute())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def percent_missing_values(data):\n",
-    "    \"\"\" Calculate the percent of missing values in the DataFrame\n",
-    "    \n",
-    "    :param data: pandas data frame\n",
-    "    :return: pandas data frame\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    missing_count = ((missing_values / df.index.size) * 100)\n",
-    "    return missing_count\n",
-    "\n",
-    "missing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_n_images(df):\n",
-    "    \n",
-    "    return len(df) - 1\n",
-    "\n",
-    "nrows = get_n_images(xtrain_df)\n",
-    "print(nrows/8000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with ProgressBar():\n",
-    "    missing_count_pct = missing_count.compute()\n",
-    "missing_count_pct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# View image data\n",
-    "\n",
-    "plt.figure(figsize=(10, 10))\n",
-    "skimage.io.imshow()"
    ]
   },
   {
@@ -696,5 +275,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
