update jorgens fredag 11

--- a/jorgens.ipynb
+++ b/jorgens.ipynb
@@ -81,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train the model using grid search optimization\n",
     "parameters = {'penalty': ['l1', 'l2'], 'C': [0.5, 1, 2]}\n",
     "\n",
     "lr = LogisticRegression()\n",
@@ -88,6 +89,16 @@
     "\n",
     "with ProgressBar():\n",
     "    tuned_lr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Score the model\n",
+    "lr.score(X_test, y_test).compute()"
    ]
   },
   {
@@ -118,8 +129,9 @@
    "source": [
     "# Fit the best classifier\n",
     "clf = tuned_lr.best_params_\n",
-    "print(clf)\n",
-    "clf.fit(X_train, y_train)\n",
+    "with ProgressBar():\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    \n",
     "print('Test accuracy: %.3f' % clf.score(X_test, y_test))"
    ]
   }
