--- a/jorgens.ipynb
+++ b/jorgens.ipynb
@@ -64,9 +64,50 @@
     "# training data\n",
     "X_train_std = sc.transform(X_train)\n",
     "X_test_std = sc.transform(X_test)\n",
-    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combining transformers and estimators in a pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "pipe_lr = make_pipeline(StandardScaler(),\n",
+    "                        PCA(n_components=2),\n",
+    "                        LogisticRegression(solver = 'lbfgs', multi_class='auto', random_state=1))\n",
+    "pipe_lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe_lr.fit(X_train, y_train)\n",
+    "y_pred = pipe_lr.predict(X_test)\n",
+    "print('Test Accuracy: %.3f' % pipe_lr.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -133,6 +174,112 @@
     "    clf.fit(X_train, y_train)\n",
     "    \n",
     "print('Test accuracy: %.3f' % clf.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute the area under curve (AUC), F1 and confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "\n",
+    "print('Precision: %.3f' % precision_score(y_true=y_test, y_pred=y_pred))\n",
+    "print('Recall: %.3f' % recall_score(y_true=y_test, y_pred=y_pred))\n",
+    "print('F1: %.3f' % f1_score(y_true=y_test, y_pred=y_pred))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot the Receiver Operating Characteristic (ROC) for your best model on the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from scipy import interp\n",
+    "\n",
+    "pipe_lr = make_pipeline(StandardScaler(),\n",
+    "                        PCA(n_components=2),\n",
+    "                        LogisticRegression(solver = 'lbfgs', max_iter = 200, \n",
+    "                                           penalty = 'l2', multi_class = 'auto',  \n",
+    "                                           random_state=1, C=100.0))\n",
+    "X_train2 = X_train[:, [4, 14]]\n",
+    "    \n",
+    "cv = list(StratifiedKFold(n_splits=3, \n",
+    "                          random_state=1).split(X_train, y_train))\n",
+    "\n",
+    "fig = plt.figure(figsize=(7, 5))\n",
+    "\n",
+    "mean_tpr = 0.0\n",
+    "mean_fpr = np.linspace(0, 1, 100)\n",
+    "all_tpr = []\n",
+    "\n",
+    "for i, (train, test) in enumerate(cv):\n",
+    "    probas = pipe_lr.fit(X_train2[train],\n",
+    "                         y_train[train]).predict_proba(X_train2[test])\n",
+    "\n",
+    "    [fpr, tpr, thresholds] = roc_curve(y_train[test],\n",
+    "                                     probas[:, 1],\n",
+    "                                     pos_label=1)\n",
+    "    mean_tpr += interp(mean_fpr, fpr, tpr)\n",
+    "    mean_tpr[0] = 0.0\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "    plt.plot(fpr,\n",
+    "             tpr,\n",
+    "             label='ROC fold %d (area = %0.2f)'\n",
+    "                   % (i+1, roc_auc))\n",
+    "\n",
+    "plt.plot([0, 1],\n",
+    "         [0, 1],\n",
+    "         linestyle='--',\n",
+    "         color=(0.6, 0.6, 0.6),\n",
+    "         label='random guessing')\n",
+    "\n",
+    "mean_tpr    /= len(cv)\n",
+    "mean_tpr[-1] = 1.0\n",
+    "mean_auc     = auc(mean_fpr, mean_tpr)\n",
+    "\n",
+    "plt.plot(mean_fpr, mean_tpr, 'k--',\n",
+    "         label='mean ROC (area = %0.2f)' % mean_auc, lw=2)\n",
+    "plt.plot([0, 0, 1],\n",
+    "         [0, 1, 1],\n",
+    "         linestyle=':',\n",
+    "         color='black',\n",
+    "         label='perfect performance')\n",
+    "\n",
+    "plt.xlim([-0.05, 1.05])\n",
+    "plt.ylim([-0.05, 1.05])\n",
+    "plt.xlabel('false positive rate')\n",
+    "plt.ylabel('true positive rate')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "# plt.savefig('images/06_10.png', dpi=300)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What are the dimensions of your training and test data? \n",
+    "### Why do we use F1 (Dice) as the scoring metric in Kaggle and not accuracy? "
    ]
   }
  ],
