--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -481,9 +481,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1      3041268\n",
+      "f2      3037269\n",
+      "f3      3034679\n",
+      "f4      3025327\n",
+      "f5      3020091\n",
+      "f6      3017617\n",
+      "f7      2866313\n",
+      "f8      2863018\n",
+      "f9      2858793\n",
+      "f10     3041268\n",
+      "f11     3037269\n",
+      "f12     3034679\n",
+      "f13     3025327\n",
+      "f14     3020091\n",
+      "f15     3017617\n",
+      "f16     2866313\n",
+      "f17     2863018\n",
+      "f18     2858793\n",
+      "f19     3041268\n",
+      "f20     3037269\n",
+      "f21     3034679\n",
+      "f22     3025327\n",
+      "f23     3020091\n",
+      "f24     3017617\n",
+      "f25     2866313\n",
+      "f26     2863018\n",
+      "f27     2858793\n",
+      "f28     3041268\n",
+      "f29     3037269\n",
+      "f30     3034679\n",
+      "         ...   \n",
+      "f133    2866313\n",
+      "f134    2863018\n",
+      "f135    2858793\n",
+      "f136    3041268\n",
+      "f137    3037269\n",
+      "f138    3034679\n",
+      "f139    3025327\n",
+      "f140    3020091\n",
+      "f141    3017617\n",
+      "f142    2866313\n",
+      "f143    2863018\n",
+      "f144    2858793\n",
+      "f145    3041268\n",
+      "f146    3037269\n",
+      "f147    3034679\n",
+      "f148    3025327\n",
+      "f149    3020091\n",
+      "f150    3017617\n",
+      "f151    2866313\n",
+      "f152    2863018\n",
+      "f153    2858793\n",
+      "f154    3041268\n",
+      "f155    3037269\n",
+      "f156    3034679\n",
+      "f157    3025327\n",
+      "f158    3020091\n",
+      "f159    3017617\n",
+      "f160    2866313\n",
+      "f161    2863018\n",
+      "f162    2858793\n",
+      "Length: 162, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the size of a feature\n",
     "print (x_train_df.count().compute())\n"
@@ -518,35 +587,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f3</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>f5</th>\n",
+       "      <th>f6</th>\n",
+       "      <th>f7</th>\n",
+       "      <th>f8</th>\n",
+       "      <th>f9</th>\n",
+       "      <th>f10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>f153</th>\n",
+       "      <th>f154</th>\n",
+       "      <th>f155</th>\n",
+       "      <th>f156</th>\n",
+       "      <th>f157</th>\n",
+       "      <th>f158</th>\n",
+       "      <th>f159</th>\n",
+       "      <th>f160</th>\n",
+       "      <th>f161</th>\n",
+       "      <th>f162</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.65008</td>\n",
+       "      <td>0.30744</td>\n",
+       "      <td>0.30627</td>\n",
+       "      <td>0.18658</td>\n",
+       "      <td>0.17911</td>\n",
+       "      <td>0.17823</td>\n",
+       "      <td>0.17443</td>\n",
+       "      <td>0.15113</td>\n",
+       "      <td>0.13941</td>\n",
+       "      <td>1.8379</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.13079</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "      <td>0.1193</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 162 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        f1       f2       f3       f4       f5       f6       f7       f8  \\\n",
+       "0  0.65008  0.30744  0.30627  0.18658  0.17911  0.17823  0.17443  0.15113   \n",
+       "\n",
+       "        f9     f10  ...     f153    f154    f155    f156    f157    f158  \\\n",
+       "0  0.13941  1.8379  ...  0.13079  0.1193  0.1193  0.1193  0.1193  0.1193   \n",
+       "\n",
+       "     f159    f160    f161    f162  \n",
+       "0  0.1193  0.1193  0.1193  0.1193  \n",
+       "\n",
+       "[1 rows x 162 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = x_train_df_imean\n",
-    "y = y_train_df"
+    "x_train_df_imean.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Mismatched divisions. (None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None) != (None, None)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3155759\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_train_df_imean_df' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-1d2b3f80c5be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/dask_ml/model_selection/_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[0;34m(test_size, train_size, random_state, shuffle, blockwise, *arrays, **options)\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    420\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0marr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 421\u001b[0;31m         \u001b[0mcheck_matching_blocks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    422\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mblockwise\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    423\u001b[0m             \u001b[0mblockwise\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/dask_ml/utils.py\u001b[0m in \u001b[0;36mcheck_matching_blocks\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    218\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdivisions\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mdivisions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                 raise ValueError(\n\u001b[0;32m--> 220\u001b[0;31m                     \u001b[0;34m\"Mismatched divisions. {} != {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivisions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdivisions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    221\u001b[0m                 )\n\u001b[1;32m    222\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Mismatched divisions. (None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None) != (None, None)"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-afcd1189a719>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx_train_df_imean_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_train_df_imean_df' is not defined"
      ]
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y_train_df)\n"
+    "print(len(y_train_df))\n",
+    "x_train_df_imean_df[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dask array with chunks\n",
+    "X = x_train_df_imean\n",
+    "X = X.to_dask_array(lengths=True)\n",
+    "y = y_train_df\n",
+    "y = y.to_dask_array(lengths=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the AUC, F1 and confusion matrix for the logistic regression model on the training data\n",
+    "\n",
+    "# Compute the AUC, F1 and confusion matrix for the logistic regression model on the training data\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "lr.fit(X_train,y_train)\n",
+    "y_true = y_test\n",
+    "y_pred = lr.predict(X_test)\n",
+    "accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "fpr, tpr, thresholds = metrics.roc_curve(y_test, y_pred)\n",
+    "print('AUC_lr: %.3f' % metrics.auc(fpr, tpr))\n",
+    "print('F1_lr: %.3f' % f1_score(y_true, y_pred))"
    ]
   }
  ],
